--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-document-picker": "^7.1.2",
     "react-native-dotenv": "^3.3.0",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
@@ -31,7 +33,9 @@
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "expo-image-picker": "~11.0.3",
+    "expo-document-picker": "~10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
